# aurora

./: Cargo.toml  README.md
.github/workflows/: rust.yml
aurora-compositor/: .gitignore  Cargo.toml  dependencies.md
aurora-compositor/src/: inputs.rs  main.rs  state.rs  winit.rs
aurora-compositor/src/desktop/: wallpaper.rs
aurora-compositor/src/grabs/: move_grab.rs  resize_grab.rs
aurora-compositor/src/handlers/: compositors.rs  inputs.rs  mod.rs  xdg_shell.rs
aurora-compositor/src/wm/: bounds.rs  geometry.rs  mod.rs  preview.rs  snap.rs
aurora-dock/: Cargo.toml
aurora-dock/resources/: style.css
aurora-dock/src/: main.rs  window_manager.rs
aurora-launcher/: Cargo.toml
aurora-settings/: Cargo.toml  styles.css
aurora-settings/src/: main.rs  window.rs
aurora-settings/src/pages/: appearance.rs
